[package]
name = "twitter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serde_json = "1.0"
serde = { version = "1.0.104", features = ["derive"] }
reqwest = { version = "0.11.10", features = ["json"] }
tokio = { version = "1", features = ["full"] }
egg-mode = "0.16.0"
